made entity lazy loading conditional